--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -1,12 +1,27 @@
 [Window][Debug##Default]
-Pos=116,167
+Pos=129,168
 Size=400,400
+Collapsed=1
 
 [Window][Main Menu]
-Pos=584,161
-Size=94,100
+Pos=585,161
+Size=418,322
+Collapsed=1
 
 [Window][主菜单]
 Pos=998,637
 Size=80,152
+
+[Window][PauseMenu]
+Pos=876,140
+Size=400,350
+
+[Window][Control Panel]
+Pos=1252,80
+Size=453,578
+Collapsed=1
+
+[Window][Pause Menu]
+Pos=490,260
+Size=300,200
 
