--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -17,11 +17,24 @@ Pos=876,140
 Size=400,350
 
 [Window][Control Panel]
-Pos=1252,80
+Pos=1252,62
 Size=453,578
 Collapsed=1
 
 [Window][Pause Menu]
 Pos=490,260
 Size=300,200
+
+[Window][Debug Panel]
+Pos=10,10
+Size=435,178
+
+[Window][调试面板]
+Pos=10,10
+Size=465,178
+
+[Window][控制面板]
+Pos=6,269
+Size=531,347
+Collapsed=1
 
