--- a/.tools/ccg_config.json
+++ b/.tools/ccg_config.json
@@ -17,17 +17,30 @@
     ],
     "source_code": [
         "../src",
-        "../src/scenes"
+        "../src/core",
+        "../src/loaders",
+        "../src/resources",
+        "../src/graphics",
+        "../src/threads",
+        "../src/utils",
+        "../src/prefabs",
+        "../src/prefabs/lights",
+        "../src/ui",
+        "../src/ui/panels",
+        "../src/main",
+        "../src/scenes",
+        "../src/managers",
+        "../src/managers/light",
+        "../src/managers/model",
+        "../src/managers/scene"
     ]
 },
 "arguments": {
     "cmd_prefix" : "g++.exe ",
     "output" : " -o ../bin/Demo.exe",
     "lib_suffix" : [
-
-        "-lmain", "-lui", "-lcore", "-lloaders", "-lgraphics", "-lresources", "-lthreads", "-lutils", "-lprefabs", "-l3rd_party",
-
-        "-lglfw3", "-lopengl32", "-lassimp", "-mwindows", "-std=c++23", "-Winvalid-pch", "-fexec-charset=UTF-8", "-g"
+        "-l3rd_party",
+        "-lglfw3", "-lopengl32", "-lassimp", "-std=c++23", "-Winvalid-pch", "-fexec-charset=UTF-8", "-g"
     ]
 }
 }
