--- a/.tools/ccg_config_1.json
+++ b/.tools/ccg_config_1.json
@@ -17,26 +17,19 @@
     ],
     "source_code": [
         "../src",
-        "../src/core",
-        "../src/loaders",
-        "../src/resources",
-        "../src/graphics",
-        "../src/threads",
-        "../src/utils",
+        "../src/scenes",
         "../src/prefabs",
-        "../src/prefabs/lights",
-        "../src/ui",
-        "../src/main",
-        "../src/scenes"
+        "../src/prefabs/lights"
     ]
 },
 "arguments": {
     "cmd_prefix" : "g++.exe ",
     "output" : " -o ../bin/Demo.exe",
     "lib_suffix" : [
-        "-l3rd_party",
+
+        "-lmain", "-lui", "-lcore", "-lloaders", "-lgraphics", "-lresources", "-lthreads", "-lutils", "-l3rd_party",
+
         "-lglfw3", "-lopengl32", "-lassimp", "-mwindows", "-std=c++23", "-Winvalid-pch", "-fexec-charset=UTF-8", "-g"
     ]
 }
-
 }
