change config files

--- a/.tools/ccg_config_all.json
+++ b/.tools/ccg_config_all.json
@@ -17,12 +17,17 @@
     ],
     "source_code": [
         "../src",
-
+        "../src/core",
+        "../src/loaders",
+        "../src/resources",
+        "../src/graphics",
+        "../src/threads",
+        "../src/utils",
         "../src/prefabs",
         "../src/prefabs/lights",
         "../src/ui",
         "../src/ui/panels",
-
+        "../src/main",
         "../src/scenes",
         "../src/managers",
         "../src/managers/light",
@@ -34,9 +39,7 @@
     "cmd_prefix" : "g++.exe ",
     "output" : " -o ../bin/Demo.exe",
     "lib_suffix" : [
-
-        "-lmain", "-lcore", "-lloaders", "-lgraphics", "-lresources", "-lthreads", "-lutils", "-l3rd_party",
-
+        "-l3rd_party",
         "-lglfw3", "-lopengl32", "-lassimp", "-std=c++23", "-Winvalid-pch", "-fexec-charset=UTF-8", "-g"
     ]
 }
