--- a/.tools/ccg_config_short.json
+++ b/.tools/ccg_config_short.json
@@ -17,17 +17,12 @@
     ],
     "source_code": [
         "../src",
-        "../src/core",
-        "../src/loaders",
-        "../src/resources",
-        "../src/graphics",
-        "../src/threads",
-        "../src/utils",
+
         "../src/prefabs",
         "../src/prefabs/lights",
         "../src/ui",
         "../src/ui/panels",
-        "../src/main",
+
         "../src/scenes",
         "../src/managers",
         "../src/managers/light",
@@ -39,7 +34,9 @@
     "cmd_prefix" : "g++.exe ",
     "output" : " -o ../bin/Demo.exe",
     "lib_suffix" : [
-        "-l3rd_party",
+
+        "-lmain", "-lcore", "-lloaders", "-lgraphics", "-lresources", "-lthreads", "-lutils", "-l3rd_party",
+
         "-lglfw3", "-lopengl32", "-lassimp", "-std=c++23", "-Winvalid-pch", "-fexec-charset=UTF-8", "-g"
     ]
 }
